--- a/gh-management.html
+++ b/gh-management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>グループホーム請求管理システム v4.10</title>
+    <title>グループホーム請求管理システム v4.11</title>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.3/dist/tesseract.min.js"></script>
     <style>
         * {
@@ -616,7 +616,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🏠 グループホーム請求管理システム v4.10</h1>
+            <h1>🏠 グループホーム請求管理システム v4.11</h1>
             <p>障害者共同生活援助サービス</p>
         </div>
 
@@ -3910,6 +3910,32 @@
         }
 
         // =========================================================
+        // 印刷ウィンドウを開いて自動的にPDF保存ダイアログを起動する
+        // ブラウザの「印刷→PDFに保存」機能を利用
+        // =========================================================
+        function openPrintWindow(bodyHtml, css, pageSize, orientation) {
+            const win = window.open('', '_blank', 'width=900,height=700');
+            const pageRule = orientation === 'landscape'
+                ? '@page { size: A4 landscape; margin: 0; }'
+                : '@page { size: A4 portrait; margin: 0; }';
+            win.document.write(`<!DOCTYPE html><html lang="ja"><head>
+<meta charset="UTF-8">
+<style>
+${pageRule}
+${css}
+</style>
+</head><body>
+${bodyHtml}
+<script>
+window.onload = function() {
+    setTimeout(function() { window.print(); }, 300);
+};
+<\/script>
+</body></html>`);
+            win.document.close();
+        }
+
+        // =========================================================
         // SE帳票PDF生成（介護給付費等請求書・明細書）
         // 様式第三（訓練等給付費等明細書）＋様式第一（請求書）
         // =========================================================
@@ -4417,33 +4443,21 @@
                 allPages.push(buildSeikyuHTML(cityCode, cityUsers, serviceYm));
             });
 
-            // HTML→印刷用ページとして新ウィンドウで開く（ブラウザ印刷でPDF保存）
-            const docHtml = `<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8">
-<title>SE帳票 ${year}年${mon}月分</title>
-<style>
-body { font-family: "MS Gothic","Meiryo",monospace; margin:0; background:white; font-size:8pt; }
-.gh-page { width:210mm; min-height:297mm; background:white; box-sizing:border-box; padding:8mm 10mm; page-break-after:always; position:relative; }
-.gh-title { text-align:center; font-size:11pt; font-weight:bold; margin-bottom:2mm; }
-.gh-subtitle { text-align:center; font-size:9pt; margin-bottom:1.5mm; }
-.gh-nengetsu { text-align:right; font-size:8.5pt; margin-bottom:1.5mm; }
-.gh-tbl { border-collapse:collapse; width:100%; }
-.gh-tbl td { border:1px solid #000; padding:1px 2px; vertical-align:middle; line-height:1.3; }
-.gh-lbl { background:#f5f5f5; font-size:6.5pt; white-space:nowrap; }
-.gh-c { text-align:center; width:5.5mm; min-width:4.5mm; font-size:8pt; }
-.center { text-align:center; } .right { text-align:right; } .left { text-align:left; }
-@page { size:A4; margin:0; }
-</style></head><body>
-${allPages.join('\n')}
-</body></html>`;
-            // Blobで直接ダウンロード
-            const blob = new Blob([docHtml], { type: 'text/html;charset=utf-8' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'SE' + year + mon.padStart(2,'0') + '_帳票.html';
-            a.click();
-            setTimeout(() => URL.revokeObjectURL(url), 1000);
-            document.getElementById('exportStatus').innerHTML = '<div class="alert alert-success">✅ SE帳票HTMLファイルをダウンロードしました。ブラウザで開いて Ctrl+P → 「PDFに保存」でPDFにできます。</div>';
+            const seStyle = `
+                body { font-family: "MS Gothic","Meiryo",monospace; margin:0; font-size:8pt; }
+                .gh-page { width:210mm; min-height:297mm; background:white; box-sizing:border-box; padding:8mm 10mm; page-break-after:always; }
+                .gh-title { text-align:center; font-size:11pt; font-weight:bold; margin-bottom:2mm; }
+                .gh-subtitle { text-align:center; font-size:9pt; margin-bottom:1.5mm; }
+                .gh-nengetsu { text-align:right; font-size:8.5pt; margin-bottom:1.5mm; }
+                .gh-tbl { border-collapse:collapse; width:100%; }
+                .gh-tbl td { border:1px solid #000; padding:1px 2px; vertical-align:middle; line-height:1.3; }
+                .gh-lbl { background:#f5f5f5; font-size:6.5pt; white-space:nowrap; }
+                .gh-c { text-align:center; width:5.5mm; min-width:4.5mm; font-size:8pt; }
+                .center { text-align:center; } .right { text-align:right; } .left { text-align:left; }
+            `;
+            openPrintWindow(allPages.join('\n'), seStyle, 'A4', 'portrait');
+            document.getElementById('exportStatus').innerHTML =
+                '<div class="alert alert-success">✅ 印刷ダイアログが開きます。送信先で <strong>「PDFに保存」</strong> を選択してください。<br><span style="font-size:0.85em;color:#555;">ファイル名を <code>SE' + year + mon.padStart(2,'0') + '_帳票.pdf</code> にすることをおすすめします。</span></div>';
         }
 
         // ── 基本サービス名の組み立て
@@ -5073,14 +5087,22 @@ body { font-family: "MS Gothic","Meiryo",monospace; margin:0; background:white; 
 ${allPages.join('\n')}
 </body></html>`;
 
-            const blob = new Blob([docHtml], { type: 'text/html;charset=utf-8' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'SV' + year + mon.padStart(2,'0') + '_帳票.html';
-            a.click();
-            setTimeout(() => URL.revokeObjectURL(url), 1000);
-            document.getElementById('exportStatus').innerHTML = '<div class="alert alert-success">✅ SV帳票HTMLファイルをダウンロードしました。</div>';
+            const svStyle = `
+                body { font-family: "MS Gothic","Meiryo",monospace; margin:0; font-size:8pt; }
+                .sv-page { width:297mm; min-height:210mm; background:white; box-sizing:border-box; padding:5mm 8mm; page-break-after:always; position:relative; }
+                .sv-tbl { border-collapse:collapse; width:100%; }
+                .sv-tbl td { border:1px solid #000; padding:1px 2px; vertical-align:middle; line-height:1.2; font-size:7pt; }
+                .sv-lbl { background:#f5f5f5; font-size:5.5pt; }
+                .sv-nc { text-align:center; width:4.5mm; font-size:7.5pt; }
+                .sv-day { text-align:center; font-size:8pt; font-weight:bold; width:7mm; }
+                .sv-dow { text-align:center; font-size:8pt; }
+                .sv-cell { text-align:center; font-size:7pt; }
+                .sv-night { text-align:center; font-size:8pt; font-weight:bold; }
+                .sv-sign { } .sv-biko { } .center { text-align:center; }
+            `;
+            openPrintWindow(allPages.join('\n'), svStyle, 'A4', 'landscape');
+            document.getElementById('exportStatus').innerHTML =
+                '<div class="alert alert-success">✅ 印刷ダイアログが開きます。送信先で <strong>「PDFに保存」</strong> を選択してください。<br><span style="font-size:0.85em;color:#555;">ファイル名を <code>SV' + year + mon.padStart(2,'0') + '_帳票.pdf</code> にすることをおすすめします。</span></div>';
         }
 
         function countRecordsForMonth(userId, year, month) {
